# cellartracker-mcp

./: .env.example  .gitignore  .mcp.json  .mcpbignore  LICENSE  README.md  SECURITY.md  manifest.json  package-lock.json  package.json  pyproject.toml  server.json  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
scripts/: pack-check.sh  verify-versions.mjs
skills/cellartracker-data/: SKILL.md
skills/cellartracker-data/references/: schema.md
skills/wine-purchase-evaluator/: SKILL.md
skills/wine-purchase-evaluator/references/: guide.md  preferences-example.md
src/: config.ts  exporter.ts  index.ts  query.ts  schemas.ts  server.ts
src/__tests__/: config.test.ts  exporter.test.ts  query.test.ts  server.test.ts
src/cellartracker_mcp/: __init__.py  __main__.py  config.py  exporter.py  query.py  server.py
tasks/: lessons.md  todo.md
tasks/plans/: 2026-03-14-issue-11-test-suite-plan.md  2026-07-11-46-plan.md  2026-07-11-48-plan.md  2026-07-11-53-54-plan.md  2026-07-11-69-plan.md  2026-07-11-audit-implementation-plan.md  2026-07-11-issue-40-plan.md  2026-07-11-issue-42-plan.md  2026-07-11-issue-43-44-plan.md  2026-07-11-issue-45-47-plan.md  2026-07-12-49-plan.md  2026-07-12-52-plan.md  2026-07-12-52-spec.md  2026-07-12-54-modernization-design.md  2026-07-12-54-slice-a-plan.md
