[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellartracker-mcp"
version = "0.1.0"
description = "MCP server for CellarTracker wine cellar data — inventory, drinking recommendations, purchase history, and wishlist"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Brad Slavin" }]
keywords = ["cellartracker", "wine", "mcp", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Other/Nonlisted Topic",
]
dependencies = ["mcp[cli]"]

[project.scripts]
cellartracker-mcp = "cellartracker_mcp.server:main"

[project.urls]
Homepage = "https://github.com/slavins-co/cellartracker-mcp"
Repository = "https://github.com/slavins-co/cellartracker-mcp"
Issues = "https://github.com/slavins-co/cellartracker-mcp/issues"
